--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm client/dist/bundle.js",
+    "populate-db": "psql < database/schema.sql",
     "build-dev": "webpack --mode development --watch",
-    "build-prod": "webpack --mode production",
     "start": "nodemon server/index.js"
   },
   "dependencies": {
