--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm client/dist/bundle.js",
     "populate-db": "psql < database/schema.sql",
     "build-dev": "webpack --mode development --watch",
-    "start": "nodemon server/index.js"
+    "start": "pm2 start server/index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "pg-promise": "^10.9.1",
+    "pm2": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
