--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build-dev": "webpack --mode development --watch",
     "build-prod": "webpack --mode production",
     "start": "pm2 start server/index.js",
-    "stop": "pm2 stop server/index.js"
+    "stop": "pm2 stop server/index.js",
+    "nodemon": "nodemon server/index.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
